# MastodonGPT-Service

./: Dockerfile  README.md  pyproject.toml  requirements.txt
mastodongpt/: DbService.py  JwtAuthorizationFilter.py  JwtService.py  LinkService.py  app.py  contentReader.py  pdf_search_ollama.py
mastodongpt/templates/: chat.html
